--- a/package.json
+++ b/package.json
@@ -6,21 +6,17 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
-    "test": "jest"
+    "generate": "nuxt generate"
   },
   "dependencies": {
     "@nuxt/content": "^1.14.0",
-    "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3",
-    "nuxt-buefy": "^0.4.4"
+    "nuxt": "^2.15.3"
   },
   "devDependencies": {
     "@vue/test-utils": "^1.1.3",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^26.6.3",
-    "jest": "^26.6.3",
-    "vue-jest": "^3.0.4"
+    "sass": "^1.32.11",
+    "sass-loader": "^10"
   }
 }
