--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   },
   "dependencies": {
     "gatsby": "^3.9.1",
+    "gatsby-plugin-sass": "^4.10.0",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "sass": "^1.35.2"
   }
 }
