--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "eslint": "^7.31.0",
     "gatsby": "^3.9.1",
     "gatsby-plugin-sass": "^4.10.0",
+    "node-sass": "^6.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.35.2"
+  },
+  "devDependencies": {
+    "eslint-config-react-app": "^6.0.0"
   }
 }
