--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "sass": "^1.35.2"
   },
   "devDependencies": {
-    "eslint-config-react-app": "^6.0.0"
+    "css-loader": "^5.2.7",
+    "eslint-config-react-app": "^6.0.0",
+    "resolve-url-loader": "^3.1.4"
   }
 }
